fixing layout bugs

--- a/_sass/skins/_default.scss
+++ b/_sass/skins/_default.scss
@@ -1,18 +1,18 @@
 ///
 // Skin: Default
-// Author: Sina Bock
-// Email: sina.bock@uni-wuerzburg.de
+// Author: Tian Qi
+// Email: kitian616@outlook.com
 ///
 
 // main colors
 $main-color-1:     #8a0406;
 $text-color-1:     #fff;
 
-$main-color-2:     #a63311;
-$text-color-2:     #e5dadc;
+$main-color-2:     #8a0406;
+$text-color-2:     #fff;
 
-$main-color-3:     #e5dadc;
-$text-color-3:     #8a0406;
+$main-color-3:     #fcfafa;
+$text-color-3:     #333;
 
 $main-color-theme-light: rgba(#000, .9);
 $main-color-theme-dark:  rgba(#fff, .9);
@@ -21,7 +21,7 @@ $main-color-theme-dark:  rgba(#fff, .9);
 $background-color: #fff;
 
 // text colors
-$text-color-theme-light-d: #8a0406;
+$text-color-theme-light-d: #000;
 $text-color-theme-light:   #222;
 $text-color-theme-light-l: #888;
 
@@ -60,8 +60,8 @@ $text-color-function: #fff;
 $mail-color:       #0072c5;
 $facebook-color:   #4267b2;
 $twitter-color:    #1da1f2;
-$weibo-color:      #e6162d;
-$google-plus-color:#ea4335;
+$weibo-color:      #8a0406;
+$google-plus-color:#8a0406;
 $telegram-color:   #32afed;
 $medium-color:     #000;
 $zhihu-color:      #0084ff;
