--- a/_sass/skins/_orange.scss
+++ b/_sass/skins/_orange.scss
@@ -1,63 +1,63 @@
 ///
 // Skin: Orange
-// Author: Sina Bock
-// Email: sina.bock@uni-wuerzburg.de
+// Author: Tian Qi
+// Email: kitian616@outlook.com
 ///
 
 // main colors
-$main-color-1: #860111;
+$main-color-1:     #f92651;
 $text-color-1:     #fff;
 
-$main-color-2:     #a63311;
+$main-color-2:     #fdb824;
 $text-color-2:     #fff;
 
-$main-color-3: #dedadb;
-$text-color-3: #860111;
+$main-color-3:     #ff8a64;
+$text-color-3:     #fff;
 
-$main-color-theme-light: rgba(#860111, .9);
+$main-color-theme-light: rgba(#000, .9);
 $main-color-theme-dark:  rgba(#fff, .9);
 
 // page background
-$background-color: #ffffff;
+$background-color: #fffdfa;
 
 // text colors
-$text-color-theme-light-d: #860111;
-$text-color-theme-light:   #222;
-$text-color-theme-light-l: #a50034;
+$text-color-theme-light-d: rgba(#000, .95);
+$text-color-theme-light:   rgba(#000, .85);
+$text-color-theme-light-l: rgba(#000, .5);
 
-$text-color-theme-dark-d:  #fff;
-$text-color-theme-dark:    rgba(#fff, .95);
-$text-color-theme-dark-l:  rgba(#fff, .85);
+$text-color-theme-dark-d:  rgba(#fff, .95);
+$text-color-theme-dark:    rgba(#fff, .85);
+$text-color-theme-dark-l:  rgba(#fff, .65);
 
 $text-color-d:     $text-color-theme-light-d;
 $text-color:       $text-color-theme-light;
 $text-color-l:     $text-color-theme-light-l;
 
-$text-background-color: rgba(#853945, .05);
+$text-background-color: rgba(#000, .05);
 
 // header and footer colors
 $header-text-color: $text-color-3;
-$header-background: $main-color-3;
+$header-background: linear-gradient(60deg, #ffa650 0%, #ff7b50 100%);
 
 $footer-text-color: $text-color-3;
-$footer-background: $main-color-3;
+$footer-background: linear-gradient(60deg, #ffa650 0%, #ff7b50 100%);
 
 // border and shadow colors
-$border-color:     mix(#000, $background-color, 20%);
+$border-color:     mix($main-color-1, $background-color, 50%);
 $border-color-l:   mix(#000, $background-color, 10%);
 $decorate-color:   rgba(#000, .1);
-$mask-color:       rgba(#a50034, .9);
-$select-color:     rgba($main-color-1, .5);
+$mask-color:       rgba(#000, .9);
+$select-color:     rgba($main-color-3, .5);
 
 // function colors
 $green:           #52c41a;
 $blue:            #1890ff;
 $yellow:          #fa8c16;
-$red:             #8a0406;
+$red:             #f5222d;
 $text-color-function: #fff;
 
 // logo colors
-$mail-color:       #8a0406;
+$mail-color:       #0072c5;
 $facebook-color:   #4267b2;
 $twitter-color:    #1da1f2;
 $weibo-color:      #e6162d;
